# hw15_go_sql/internal/trx/models.go
@@ -2,18 +2,12 @@ package trx
 
 import "github.com/jackc/pgx/v5/pgtype"
 
-// type Product struct {
-// 	Name     string         `db:"name" json:"name"`
-// 	Quantity pgtype.Numeric `db:"quantity" json:"quantity"`
-// }
-
-// type CreateOrderParams struct {
-// 	User     string    `db:"name" json:"user"`
-// 	Products []Product `json:"products"`
-// }
-
-type CreateOrderParams struct {
-	User     string         `db:"name" json:"user"`
+type Product struct {
 	Name     string         `db:"name" json:"product"`
 	Quantity pgtype.Numeric `db:"quantity" json:"quantity"`
+}
+
+type CreateOrderParams struct {
+	User     string `db:"name" json:"user"`
+	Products []Product
 }
